메뉴 영역인 nav 생성과 nav의 기본적인  스타일 작성

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- 스타일 초기화 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" href="ui.css">
 
 </head>
@@ -16,6 +18,14 @@
         <strong class="logo_box">
           <img src="./images/dhpublogo.png" alt="logo">
         </strong>
+        <nav>
+          <ul>
+            <li><a href="#">회사소개</a></li>
+            <li><a href="#">도서소개</a></li>
+            <li><a href="#">F&Q</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </nav>
       </header>
 
       <section id="container"></section>
