footer 및 container 영역 레이아웃 작업

--- a/index.html
+++ b/index.html
@@ -28,9 +28,45 @@
         </nav>
       </header>
 
-      <section id="container"></section>
+      <section id="container">
+        <!-- 
+          23.10.22
+          이미지가 안나와서 테스트 중 
+        -->
+        <div class="face">
+          <a href="https://www.facebook.com/" class="face" title="페이스북으로 이동">111</a>
+        </div>
 
-      <footer></footer>
+        <section id="menu1" class="content">
+          <h2>회사소개</h2>
+          <div class="combox"></div>
+        </section>
+        <section id="menu2" class="content">
+          <h2>도서소개</h2>
+          <div class="combox"></div>
+        </section>
+        <section id="menu3" class="content">
+          <h2>FAQ</h2>
+          <div class="combox"></div>
+        </section>
+        <section id="menu4" class="content">
+          <h2>Contact us</h2>
+          <div class="combox"></div>
+        </section>
+
+      </section>
+
+      <footer>
+        <address>
+          (04003) 서울특별시 강남구 청담동 107 TEL (02)325-1722 FAX (02)326-1723
+        </address>
+        <p>
+          Copyright(c)2023 DH.Pub(주) DhPub.Co., Ltd. All Rights Reserved
+        </p>
+        <a href="https://www.facebook.com/" class="face" title="페이스북으로 이동">페</a>
+        <a href="https://www.twitter.com/" class="twit" title="트위터로 이동">트</a>
+        <a href="https://www.instagram.com/" class="instar" title="인스타그램으로 이동">인</a>
+      </footer>
             
   </section>
 </body>
