js 파일 생성 및 메뉴 클릭 시 선택 메뉴 페이지 영역 확장

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!-- 스타일 초기화 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" href="ui.css">
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript" src="ui.js"></script> 
 
 </head>
 <body>
@@ -20,10 +25,10 @@
         </strong>
         <nav>
           <ul>
-            <li><a href="#">회사소개</a></li>
-            <li><a href="#">도서소개</a></li>
-            <li><a href="#">F&Q</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li data-rol="menu1"><a href="#">회사소개</a></li>
+            <li data-rol="menu2"><a href="#">도서소개</a></li>
+            <li data-rol="menu3"><a href="#">F&Q</a></li>
+            <li data-rol="menu4"><a href="#">Contact us</a></li>
           </ul>
         </nav>
       </header>
