--- a/index.html
+++ b/index.html
@@ -44,19 +44,21 @@
 
         <section id="menu1" class="content">
           <h2>회사소개</h2>
-          <div class="combox"></div>
+          <div class="conbox">
+            <section class="content_wrap"></section>
+          </div>
         </section>
         <section id="menu2" class="content">
           <h2>도서소개</h2>
-          <div class="combox"></div>
+          <div class="conbox"></div>
         </section>
         <section id="menu3" class="content">
           <h2>FAQ</h2>
-          <div class="combox"></div>
+          <div class="conbox"></div>
         </section>
         <section id="menu4" class="content">
           <h2>Contact us</h2>
-          <div class="combox"></div>
+          <div class="conbox"></div>
         </section>
 
       </section>
