메뉴와 컨텐츠 영역의 상호작용 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!-- 스타일 초기화 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" href="ui.css">
-    <script
+    <script defer
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"></script>
-    <script type="text/javascript" src="ui.js"></script> 
+    <script defer type="text/javascript" src="ui.js"></script> 
 
 </head>
 <body>
