롤링 배너와 상세 화면을 ajax로 동적 구성

--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
                 <button class="roll_right"></button>
                 <div class="book_roll">
                   <ul>
-                    <li><img src="images/dhpublogo.png" alt="book1"/></li>
-                    <li><img src="images/desk.avif" alt="book2"/></li>
-                    <li><img src="images/facebook.png" alt="book3"/></li>
-                    <li><img src="images/instar.png" alt="book4"/></li>
-                    <li><img src="images/notebook.png" alt="book5"/></li>
-                    <li><img src="images/notebook1.jpg" alt="book6"/></li>
-                    <li><img src="images/twit.png" alt="book7"/></li>
-                    <li><img src="images/bg.jpg" alt="book8"/></li>
+                    <li data-url="book1.html"><img src="images/dhpublogo.png" alt="book1"/></li>
+                    <li data-url="book2.html"><img src="images/desk.avif" alt="book2"/></li>
+                    <li data-url="book3.html"><img src="images/facebook.png" alt="book3"/></li>
+                    <li data-url="book4.html"><img src="images/instar.png" alt="book4"/></li>
+                    <li data-url="book5.html"><img src="images/notebook.png" alt="book5"/></li>
+                    <li data-url="book6.html"><img src="images/notebook1.jpg" alt="book6"/></li>
+                    <li data-url="book7.html"><img src="images/twit.png" alt="book7"/></li>
+                    <li data-url="book8.html"><img src="images/bg.jpg" alt="book8"/></li>
                   </ul>
                 </div>
               </div>
