FAQ 메뉴에서 목록을 아코디언 형태로 처리

--- a/books/book5.html
+++ b/books/book5.html
@@ -4,7 +4,7 @@
     <img src="./images/facebook.png" alt="DHPub BOOK" />
   </div>
   <section class="book_description">
-    <h4>DH PUb &#60; 리미티드 에디션 &#62;</h4>
+    <h4>DH PUb &#60; 리미티드 에디션5 &#62;</h4>
       <ul class="bullet_list">
         <li><em>저자 </em> 김동현 </li>
         <li><em>저자 </em> 김동현 </li>
