--- a/index.html
+++ b/index.html
@@ -208,7 +208,58 @@
         </section>
         <section id="menu4" class="content">
           <h2>Contact us</h2>
-          <div class="conbox"></div>
+          <div class="conbox">
+            <section class="content_wrap">
+              <h3 class="form_tit">지금 DH.Pub에 물어보세요</h3>
+              <form class="gform" method="post" name="contactus">
+                <fieldset>
+                  <legend>Contact Us</legend>
+                  <div class="formlist">
+                    <ul>
+                      <li>
+                        <label for="namd">이름 <sub>*</sub></label>
+                        <span class="inputbox">
+                          <input 
+                            type="text" 
+                            id="name" 
+                            name="name" 
+                            required 
+                            placeholder="이름을 입력해주세요"
+                          />
+                        </span>
+                      </li>
+                      <li>
+                        <label for="email">답변 받을 이메일 <sub>*</sub></label>
+                        <span class="inputbox">
+                          <input 
+                            type="email" 
+                            id="email" 
+                            name="email" 
+                            required 
+                            placeholder="smaple@email.com"
+                          />
+                        </span>
+                      </li>
+                      <li>
+                        <label for="message">문의 내용 <sub>*</sub></label>
+                        <span class="textbox">
+                          <textarea 
+                            id="message" 
+                            name="message" 
+                            required 
+                            placeholder="궁금한 사항을 작성해주세요"
+                          ></textarea>
+                        </span>
+                      </li>
+                    </ul>
+                    <div class="btn_box">
+                      <button type="submit" class="commbtn gray">문의하기</button>
+                    </div>
+                  </div>
+                </fieldset>
+              </form>
+            </section>
+          </div>
         </section>
 
       </section>
