Contact us 페이지 form 전송 시 팝업창 생성

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <section id="wrap">
     <!-- SEO 때문에 화면에는 표기하지 않지만 전체 페이지에 대한 제목을 부여 -->
-    <h1>DH.Pub</h1>
+    <h1 class="seo">DH.Pub</h1>
       <header>
         <strong class="logo_box">
           <img src="./images/dhpublogo.png" alt="logo">
@@ -166,7 +166,7 @@
               <div class="acordio_box">
                 <ol>
                   <li class="on">
-                    <h4><span>01</span>도서와 관련된 자료가 있나요?</h4>
+                    <h4><span>01</span>도서와 관련된 자료가 있나요?<span class="arr_btn"></span></h4>
                     <p><a href="#" target="_blank">
                       자료실
                     </a>
@@ -175,7 +175,7 @@
                    </p>
                   </li>
                   <li>
-                    <h4><span>02</span>도서와 관련된 자료가 있나요?</h4>
+                    <h4><span>02</span>도서와 관련된 자료가 있나요?<span class="arr_btn"></span></h4>
                     <p><a href="#" target="_blank">
                       자료실
                     </a>
@@ -184,7 +184,7 @@
                    </p>
                   </li>
                   <li>
-                    <h4><span>03</span>도서와 관련된 자료가 있나요?</h4>
+                    <h4><span>03</span>도서와 관련된 자료가 있나요?<span class="arr_btn"></span></h4>
                     <p><a href="#" target="_blank">
                       자료실
                     </a>
@@ -193,12 +193,14 @@
                    </p>
                   </li>
                   <li>
-                    <h4><span>04</span>도서와 관련된 자료가 있나요?</h4>
+                    <h4><span>04</span>도서와 관련된 자료가 있나요?<span class="arr_btn"></span></h4>
                     <p><a href="#" target="_blank">
                       자료실
                     </a>
                     에서 로그인한 후 제공합니다<br />
                     원하는 도서명을 검색하여 도서와 관련된 추가 자료를 다운로드할 수 있습니다
+                    https://docs.google.com/spreadsheets/u/1/d/1Bn4m6iA_Xch1zzhNvo_6CoQWqOAgwwkOWJKC-phHx2Q/copy
+                    https://velog.io/@kwb020312/%EC%95%8C%EA%B2%8C%EB%90%9C-%EA%B2%83-Google-SpreadSheet%EB%A5%BC-%ED%99%9C%EC%9A%A9%ED%95%9C-%EB%B0%B1%EC%97%94%EB%93%9C-%EC%97%86%EC%9D%B4-%EC%A0%84%EC%9E%90%EB%A9%94%EC%9D%BC-%EC%A0%84%EC%86%A1%ED%95%98%EA%B8%B0
                    </p>
                   </li>
                 </ol>
@@ -255,6 +257,15 @@
                     <div class="btn_box">
                       <button type="submit" class="commbtn gray">문의하기</button>
                     </div>
+                  </div>
+                  <div class="thankyou_message">
+                    <section>
+                      <h1>작성 완료되었습니다.</h1>
+                      <p>확인 후 빠르게 답변 드리겠습니다.</p>
+                      <div class="btn_box">
+                        <a href="#" class="commbtn gray close">닫기</a>
+                      </div>
+                    </section>
                   </div>
                 </fieldset>
               </form>
